[package]
name = "proc-macro-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "proc_macro_support"
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0.82", features = ["full", "extra-traits"] }
# quote = "1.0.10"
itertools = "0.10.3"
proc-macro2 = "1.0.37"
